fix avatar shrink bug on too long names  in profile view CC @link2xt

--- a/scss/contact/_contact.scss
+++ b/scss/contact/_contact.scss
@@ -8,7 +8,6 @@
   object-fit: cover;
   height: 48px;
   width: 48px;
-  min-width: 48px;
   margin-top: 8px;
   margin-bottom: 8px;
   border-radius: 100%;
@@ -39,7 +38,6 @@
   object-fit: cover;
   height: 48px;
   width: 48px;
-  min-width: 48px;
   margin-top: 8px;
   margin-bottom: 8px;
   border-radius: 100%;
